[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "optika"
authors = [
    {name = "Roy T. Smart", email = "roytsmart@gmail.com"},
]
description = "A Python library for simulating optical systems, similar to Zemax"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "astropy!=6.1.5",
    "named-arrays==0.20.0",
    "pymupdf",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "pytest",
    "matplotlib",
    "graphviz",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-bibtex",
    "pydata-sphinx-theme",
    "ipykernel",
    "jupyter-sphinx",
    "nbsphinx",
    "sphinx-codeautolink",
    "sphinx-favicon",
]

[project.urls]
Homepage = "https://github.com/sun-data/optika"
Documentation = "https://optika.readthedocs.io/en/latest"

[tool.setuptools_scm]
